--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 *.out
 *.app
 /.vs/ComputerGraphics
+/x64/Debug
+/vulkanTriangle/x64/Debug/vulkanTriangle.vcxproj.FileListAbsolute.txt
+/vulkanTriangle/x64/Debug/vulkanTriangle.log
+/vulkanTriangle/x64/Debug/vulkanTriangle.Build.CppClean.log
