完成cpu内存数据复制到GPU内存

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /vulkanTriangle/x64/Debug/vulkanTriangle.vcxproj.FileListAbsolute.txt
 /vulkanTriangle/x64/Debug/vulkanTriangle.log
 /vulkanTriangle/x64/Debug/vulkanTriangle.Build.CppClean.log
+/vulkanTriangle/x64/Debug
