--- a/vulkanTriangle/vulkanTriangle.vcxproj.filters
+++ b/vulkanTriangle/vulkanTriangle.vcxproj.filters
@@ -61,4 +61,7 @@
   <ItemGroup>
     <Object Include="models\viking_room.obj" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
 </Project>
