--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /vulkanTriangle/x64/Debug/vulkanTriangle.log
 /vulkanTriangle/x64/Debug/vulkanTriangle.Build.CppClean.log
 /vulkanTriangle/x64/Debug
+/vulkanTriangle/x64/Release
