封装vulkan,抽象window类，application类以及instance类

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /vulkanTriangle/x64/Debug/vulkanTriangle.Build.CppClean.log
 /vulkanTriangle/x64/Debug
 /vulkanTriangle/x64/Release
+/OpenGLTriangle/x64/Debug
+/vulkanRenderer/x64/Debug
