--- a/vulkanRenderer/vulkanRenderer.vcxproj.filters
+++ b/vulkanRenderer/vulkanRenderer.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="source\IndexResource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\FrameBufferSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\DescriptorSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="const.h">
@@ -141,6 +147,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\IndexResource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\FrameBufferSource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\DescriptorSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
