--- a/vulkanRenderer/vulkanRenderer.vcxproj
+++ b/vulkanRenderer/vulkanRenderer.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="source\TextureResource.cpp" />
     <ClCompile Include="source\UBOResource.cpp" />
     <ClCompile Include="render\VulkanSyncObjectsManager.cpp" />
+    <ClCompile Include="Uncopyable.cpp" />
     <ClCompile Include="utils\FileUtils.cpp" />
     <ClCompile Include="utils\VkExtensionUtils.cpp" />
     <ClCompile Include="init\VulkanDevice.cpp" />
@@ -166,7 +167,6 @@
     <ClCompile Include="init\Window.cpp" />
     <ClCompile Include="render\VulkanSwapChainManager.cpp" />
     <ClCompile Include="render\VulkanRenderPassManager.cpp" />
-    <ClCompile Include="utils\VkResourceUtils.cpp" />
     <ClCompile Include="utils\VkFormatUtils.cpp" />
     <ClCompile Include="render\VulkanCommandManager.cpp" />
     <ClCompile Include="source\VertexResource.cpp" />
@@ -190,6 +190,7 @@
     <ClInclude Include="source\TextureResource.h" />
     <ClInclude Include="source\UBOResource.h" />
     <ClInclude Include="render\VulkanSyncObjectsManager.h" />
+    <ClInclude Include="Uncopyable.h" />
     <ClInclude Include="utils\FileUtils.h" />
     <ClInclude Include="utils\VkExtensionUtils.h" />
     <ClInclude Include="init\VulkanDevice.h" />
@@ -197,10 +198,12 @@
     <ClInclude Include="init\Window.h" />
     <ClInclude Include="render\VulkanSwapChainManager.h" />
     <ClInclude Include="render\VulkanRenderPassManager.h" />
-    <ClInclude Include="utils\VkResourceUtils.h" />
     <ClInclude Include="utils\VkFormatUtils.h" />
     <ClInclude Include="render\VulkanCommandManager.h" />
     <ClInclude Include="source\VertexResource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="notebook\0513.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
